<resources>
    <string name="app_name">NewsAppAdm</string>
    <string name="write_a_news">Escreva uma Notícia</string>
    <string name="hint_title">Título</string>
    <string name="hint_write_your_news">Escreva sua notícia</string>
    <string name="hint_date">Data de publicação</string>
    <string name="hint_author">Autor</string>
    <string name="txt_button_publish">Publicar Notícia</string>
</resources>